--- a/app/views/partials/footer.hbs
+++ b/app/views/partials/footer.hbs
@@ -5,7 +5,7 @@
 		<div class="row">
 
 			<div class="col-sm-12 text-center">
-				<p class="copyright font-inc m-b-0">© 2017 <a href="index.html">David Tomas Martinez</a>, All Rights Reserved.</p>
+				<p class="copyright font-inc m-b-0">© 2017 <a href="/">David Tomas Martinez</a>, All Rights Reserved.</p>
 			</div>
 
 		</div>
