--- a/app/views/partials/publication-list-item.hbs
+++ b/app/views/partials/publication-list-item.hbs
@@ -3,7 +3,7 @@
 	<div class="post-header post-header-small">
 
 		<div class="post-icon">
-			<span class="icon-documents"></span>
+            <span class="{{item.typeIcon}}"></span>
 		</div>
 
 		<h2 class="post-title font-alt">
