--- a/app/views/partials/press-list-item.hbs
+++ b/app/views/partials/press-list-item.hbs
@@ -15,7 +15,7 @@
 		</h2>
 
 		<div class="post-meta font-inc">
-			{{item.fields.type}} {{#if item.fields.date}}| {{item.fields.date}}{{/if}}
+			{{item.fields.type}} {{#if item.date}}| {{item.date}}{{/if}}
 		</div>
 	</div>
 
